--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 <body>
   <div id="app"></div>
   <script>
- window.$docsify = {
-    loadSidebar: true,
-	subMaxLevel: 2,
-	alias: {
-      '/.*/_sidebar.md': '/_sidebar.md'
+    window.$docsify = {
+      name: '',
+      repo: '',
+	  loadSidebar: true
     }
-  }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </body>
